--- a/src/main/resources/templates/board/resShowList.html
+++ b/src/main/resources/templates/board/resShowList.html
@@ -6,10 +6,26 @@
 </head>
 음식점 리스트 보여주는 화면
 <body>
-<tr th:each="member : ${list}"><br>
-    <td th:text="${list.id}"></td><br>
-    <td th:text="${list.name}"></td>
-</tr>
+<table id="userTable" style="border: 1px solid">
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>이름</th>
+        <th>위치</th>
+        <th>일일이윤</th>
+        <th>주간이윤</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user : ${list}">
+        <td th:text="${user.id}">emil</td>
+        <td th:text="${user.name}">name</td>
+        <td th:text="${user.location}">stat</td>
+        <td th:text="${user.daily_profit}">super</td>
+        <td th:text="${user.weekly_profit}">super</td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
