--- a/src/main/resources/templates/board/resStatus.html
+++ b/src/main/resources/templates/board/resStatus.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 음식점 상세보기
+<span th:text="${restaurant.getId()}"></span>
+<span th:text="${restaurant.getName()}"></span>
+<span th:text="${restaurant.getDaily_profit()}"></span>
 </body>
 </html>
