--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 소개 페이지
+<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1><br>
 <a href="/res/showList">주문하러가기</a>
 <a href="/member/loginPage">로그인</a>
+<a href="/seller/test">seller</a>
+<a href="/customer/test">customer</a>
+<br>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
 </body>
 </html>
