--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 소개 페이지
-<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1><br>
+<h1 th:inline="text">반갑습니다! [[${#httpServletRequest.remoteUser}]]!</h1><br>
 <a href="/res/showList">주문하러가기</a>
 <a href="/member/loginPage">로그인</a>
 <a href="/seller/test">seller</a>
 <a href="/customer/test">customer</a>
 <br>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+<!--<p th:if="${#authentication.name}=='seller'">seller</p>-->
+<div sec:authorize="isAuthenticated()">
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="로그아웃"/>
+    </form>
+</div>
 </body>
 </html>
