--- a/src/main/resources/templates/board/resStatus.html
+++ b/src/main/resources/templates/board/resStatus.html
@@ -10,6 +10,6 @@
 <span th:text="${restaurant.getName()}"></span>
 <span th:text="${restaurant.getDaily_profit()}"></span>
 비동기로 구현 예정
-<a th:href="@{/res/showReservation(res_id=${restaurant.getId()})}">예약하기</a>
+<a th:href="@{/res/showReservation(resId=${restaurant.getId()})}">예약하기</a>
 </body>
 </html>
