--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,5 +26,7 @@
         <input type="submit" value="로그아웃"/>
     </form>
 </div>
+<sec:csrfInput />
+<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
 </body>
 </html>
